@@ -4,7 +4,11 @@ ddetect (0.105) UNRELEASED; urgency=low
     - add plip in devnames
   * Joshua Kwan
     - add more devnames descriptions for powerpc
-	
+  * Joey Hess
+    - Load yenta_socket a bit later, after the discover run, because it
+      looked strange to load a module before it said it was detecting
+      hardware. It still loads before any other modules.
+
  -- Joshua Kwan <joshk@triplehelix.org>  Sun,  4 Jul 2004 14:01:20 -0700
 
 ddetect (0.104) unstable; urgency=low
